# steveros

./: .gitignore  REPORT_zero_offset_calibration.md  SSG-48-Gripper-US-BOM.md  humanoid_rl_projects_deep_dive.md  pollen_poppy_analysis.md  references.bib  robstride_protocol.tex  session_report.tex  steveros_architecture.tex  vr_teleoperation_research.md
docs/: TELEOPERATION_LITERATURE_REVIEW.md  cartesian_controller_research.md  gripper_research.md  hardware_interface_analysis.md  hardware_rewrite_postmortem.md  hardware_rewrite_prompt.xml  hardware_rewrite_research.md  hardware_rewrite_research_prompt.json  humanoid_architecture_research.md  humanoid_projects_report.md  humanoid_projects_wave2_report.md  motor_oscillation_postmortem.md  motor_setup_and_calibration.md  moveit2_post_implementation_analysis.md  quest2_ros2_integration_research.md  quest2_vr_teleop_integration_plan.md  research_imu_teleoperation.md  roadmap.md  session_2026_03_04.tex  vr_centralized_ik_pipeline_research.md  vr_teleoperation_research.md
mediapipe_ros2_interfaces/msg/: PoseLandmarks.msg
mediapipe_ros2_node/rviz/: mediapipe_default.rviz
mediapipe_ros2_py/: package.xml  setup.py
mediapipe_ros2_py/launch/: pose_teleop.launch.py
mediapipe_ros2_py/mediapipe_ros2_py/: mp_node.py  pose_to_joints.py
mediapipe_ros2_py/rviz/: mediapipe_default.rviz
steveros_bringup/: CMakeLists.txt  package.xml
steveros_bringup/config/: controllers.yaml  test_single_motor_controllers.yaml
steveros_bringup/launch/: steveros.launch.py  test_single_motor.launch.py
steveros_bringup/scripts/: read_offsets.py
steveros_description/: CMakeLists.txt  package.xml
steveros_description/launch/: display.launch.py
steveros_description/rviz/: steveros.rviz
steveros_description/urdf/: kbot.urdf  steveros.urdf.xacro  steveros_ros2_control.xacro  test_single_motor.urdf.xacro
steveros_hardware/: CMakeLists.txt  package.xml  steveros_hardware.xml
steveros_hardware/include/steveros_hardware/: robstride_can_driver.hpp  robstride_protocol.hpp  steveros_hardware.hpp  visibility_control.h
steveros_hardware/src/: robstride_can_driver.cpp  steveros_hardware.cpp
steveros_hardware/test/: test_can_bus_inspection.cpp  test_motor21_defaults.cpp  test_motor21_diag.cpp  test_motor21_move.cpp  test_robstride_can_driver.cpp  test_robstride_protocol.cpp
steveros_ik/: package.xml  setup.cfg  setup.py  test_math_validation.py  test_pink_ik.py  test_state_debug.py  test_stress.py  test_xr_bridge.py  test_xr_math.py
steveros_ik/config/: ik_upper_body.yaml
steveros_ik/launch/: ik.launch.py  ik_teleop.launch.py
steveros_ik/steveros_ik/: __init__.py  ik_node.py  pink_configuration.py  pink_solver.py  xr_bridge_node.py
steveros_moveit_config/: CMakeLists.txt  package.xml
steveros_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  steveros.srdf
steveros_moveit_config/launch/: demo.launch.py  move_group.launch.py
steveros_mujoco/: CMakeLists.txt  package.xml
steveros_mujoco/config/: controllers.yaml  controllers_sim.yaml
steveros_mujoco/launch/: steveros_mujoco.launch.py
steveros_mujoco/mjcf/: scene.xml  scene_suspended.xml  steveros_robot.xml  steveros_robot_suspended.xml
